# Zen

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: doxygen.yml  static.yml
docs/: GameLayer_8h_source.html  Obstacle_8cpp_source.html  Player_8h_source.html  QuadBuilder_8h_source.html  ZEN__Buffer_8h_source.html  ZEN__CameraController_8h_source.html  ZEN__Camera_8cpp_source.html  ZEN__DeltaTime_8h_source.html  ZEN__EventBuffer_8h_source.html  ZEN__Event_8h_source.html  ZEN__ImGuiLayer_8cpp_source.html  ZEN__ImGuiLayer_8h_source.html  ZEN__InputSystem_8cpp_source.html  ZEN__InputSystem_8h_source.html  ZEN__Input_8cpp_source.html  ZEN__KeyCodes_8h_source.html  ZEN__LayerList_8cpp_source.html  ZEN__LinuxWindow_8cpp_source.html  ZEN__LinuxWindow_8h_source.html  ZEN__OpenGLBuffer_8cpp_source.html  ZEN__OpenGLContext_8cpp_source.html  ZEN__OpenGLContext_8h_source.html  ZEN__OpenGLVertexArray_8cpp_source.html  ZEN__ParticleSystem_8cpp_source.html  ZEN__ParticleTestLayer_8cpp_source.html  ZEN__ParticleTestLayer_8h_source.html  ZEN__RendererAPI_8cpp_source.html  ZEN__RendererAPI_8h_source.html  ZEN__Renderer_8cpp_source.html  ZEN__Shader_8cpp_source.html  ZEN__Style_8h_source.html  ZEN__VertexArray_8cpp_source.html  ZEN__VertexArray_8h_source.html  ZEN__Window_8h_source.html  annotated.html  annotated_dup.js  classObstacle-members.html  classQuadBuilder-members.html  classZen_1_1Application-members.html  classZen_1_1Application.html  (+57 more)
docs/html/: GameLayer_8cpp_source.html  Obstacle_8h_source.html  Player_8cpp_source.html  QuadBuilder_8cpp_source.html  ZEN__Application_8cpp_source.html  ZEN__Application_8h_source.html  ZEN__Buffer_8cpp_source.html  ZEN__CameraController_8cpp_source.html  ZEN__Camera_8h_source.html  ZEN__Core_8h_source.html  ZEN__EngineTime_8h_source.html  ZEN__EntryPoint_8h_source.html  ZEN__EventBuffer_8cpp_source.html  ZEN__Event_8cpp_source.html  ZEN__Events_8cpp_source.html  ZEN__Events_8h_source.html  ZEN__GraphicsContext_8cpp_source.html  ZEN__GraphicsContext_8h_source.html  ZEN__Image_8h_source.html  ZEN__Input_8h_source.html  ZEN__LayerList_8h_source.html  ZEN__Layer_8cpp_source.html  ZEN__Layer_8h_source.html  ZEN__Log_8cpp_source.html  ZEN__Log_8h_source.html  ZEN__MouseCodes_8h_source.html  ZEN__OpenGLBuffer_8h_source.html  ZEN__OpenGLRendererAPI_8cpp_source.html  ZEN__OpenGLRendererAPI_8h_source.html  ZEN__OpenGLVertexArray_8h_source.html  ZEN__ParticleSystem_8h_source.html  ZEN__RenderCommand_8cpp_source.html  ZEN__RenderCommand_8h_source.html  ZEN__Renderer_8h_source.html  ZEN__Shader_8h_source.html  ZEN__Style_8cpp_source.html  ZEN__Texture_8h_source.html  ZEN__Timer_8h_source.html  ZEN__Types_8h_source.html  ZEN__Window_8cpp_source.html  (+93 more)
docs/latex/: GameLayer_8cpp_source.tex  GameLayer_8h_source.tex  Obstacle_8cpp_source.tex  Obstacle_8h_source.tex  Player_8cpp_source.tex  Player_8h_source.tex  QuadBuilder_8cpp_source.tex  QuadBuilder_8h_source.tex  ZEN__Application_8cpp_source.tex  ZEN__Application_8h_source.tex  ZEN__Buffer_8cpp_source.tex  ZEN__Buffer_8h_source.tex  ZEN__CameraController_8cpp_source.tex  ZEN__CameraController_8h_source.tex  ZEN__Camera_8cpp_source.tex  ZEN__Camera_8h_source.tex  ZEN__DeltaTime_8h_source.tex  ZEN__EngineTime_8h_source.tex  ZEN__EntryPoint_8h_source.tex  ZEN__EventBuffer_8cpp_source.tex  (+116 more)
editor/: CMakeLists.txt
editor/src/: DemoSwitcher.cpp  DemoSwitcher.h  GameLayer.cpp  GameLayer.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  QuadBuilder.cpp  QuadBuilder.h  Zenith.cpp
engine/: CMakeLists.txt
engine/zen/: ZEN_Types.h  zen_pch.h
engine/zen/camera/: CMakeLists.txt  Camera.cpp  ZEN_Camera.cpp  ZEN_Camera.h  ZEN_CameraController.cpp  ZEN_CameraController.h
engine/zen/core/: CMakeLists.txt  ZEN_Application.cpp  ZEN_Application.h  ZEN_EntryPoint.h  ZEN_Platform.h  ZEN_Window.cpp  ZEN_Window.h
engine/zen/core/linux/: ZEN_LinuxWindow.cpp  ZEN_LinuxWindow.h
engine/zen/events/: CMakeLists.txt  ZEN_Event.cpp  ZEN_Event.h  ZEN_EventBuffer.cpp  ZEN_EventBuffer.h  ZEN_Events.cpp  ZEN_Events.h
engine/zen/gui/: CMakeLists.txt  ZEN_ImGuiLayer.cpp  ZEN_ImGuiLayer.h  ZEN_Style.cpp  ZEN_Style.h
engine/zen/inputs/: CMakeLists.txt  ZEN_Input.cpp  ZEN_Input.h  ZEN_InputSystem.cpp  ZEN_InputSystem.h  ZEN_KeyCodes.h  ZEN_MouseCodes.h
engine/zen/layer/: ZEN_Layer.cpp  ZEN_Layer.h  ZEN_LayerList.cpp  ZEN_LayerList.h
engine/zen/log/: ZEN_Log.cpp  ZEN_Log.h
engine/zen/particles/: BADParticleSystem.cpp  BADParticleSystem.h  CMakeLists.txt  ZEN_ParticleSystem.cpp  ZEN_ParticleSystem.h  ZEN_ParticleTestLayer.cpp  ZEN_ParticleTestLayer.h
engine/zen/platform/OpenGL/: ZEN_OpenGLBuffer.cpp  ZEN_OpenGLBuffer.h  ZEN_OpenGLContext.cpp  ZEN_OpenGLContext.h  ZEN_OpenGLRendererAPI.cpp  ZEN_OpenGLRendererAPI.h  ZEN_OpenGLVertexArray.cpp
engine/zen/platform/linux/: ZEN_LinuxWindow.cpp  ZEN_LinuxWindow.h
engine/zen/renderer/: CMakeLists.txt  ZEN_Buffer.cpp  ZEN_Buffer.h  ZEN_GraphicsContext.cpp  ZEN_GraphicsContext.h  ZEN_RenderCommand.cpp  ZEN_RenderCommand.h  ZEN_Renderer.cpp  ZEN_Renderer.h  ZEN_RendererAPI.cpp  ZEN_RendererAPI.h  ZEN_Shader.cpp  ZEN_Shader.h  ZEN_VertexArray.cpp  ZEN_VertexArray.h
engine/zen/renderer/OpenGL/: ZEN_OpenGLBuffer.cpp  ZEN_OpenGLBuffer.h  ZEN_OpenGLContext.cpp  ZEN_OpenGLContext.h  ZEN_OpenGLRendererAPI.cpp  ZEN_OpenGLRendererAPI.h  ZEN_OpenGLVertexArray.cpp  ZEN_OpenGLVertexArray.h
engine/zen/renderer/abstractions/: ZEN_Buffer.cpp  ZEN_Buffer.h  ZEN_GraphicsContext.cpp  ZEN_GraphicsContext.h  ZEN_RenderCommand.cpp  ZEN_RenderCommand.h  ZEN_Renderer.cpp  ZEN_Renderer.h  ZEN_RendererAPI.cpp  ZEN_RendererAPI.h  ZEN_Shader.cpp  ZEN_Shader.h  ZEN_VertexArray.cpp  ZEN_VertexArray.h
engine/zen/renderer/particles/: ZEN_ParticleSystem.cpp  ZEN_ParticleSystem.h  ZEN_ParticleTestLayer.cpp  ZEN_ParticleTestLayer.h
engine/zen/textures/: ZEN_Image.h  ZEN_Texture.h
engine/zen/time/: ZEN_DeltaTime.h  ZEN_EngineTime.h  ZEN_Timer.h
engine/zen/utility/: CMakeLists.txt  ZEN_Log.cpp  ZEN_Log.h  ZEN_Macros.h  ZEN_Profiler.h
scripts/: run-flamegraph.sh
(+17 files in other folders)
